Bugfix: Visibility of custom color and gradients in editor

--- a/assets/sass/4-layout/_header.scss
+++ b/assets/sass/4-layout/_header.scss
@@ -76,7 +76,6 @@
 			max-height: 100%;
 
 			img {
-				width: none !important;
 				height: auto;
 			}
 		}
